tests/spec/emit/snapshots/enum_marshal_json_method_without_json_attribute.snap
---
source: tests/spec/emit/types.rs
description: |
  
  enum Status {
    Ready,
  }
  
  impl Status {
    fn MarshalJSON(self) -> Result<Slice<byte>, error> {
      Ok([])
    }
  }
---
package main

func MakeStatusReady() Status {
	return Status{Tag: StatusReady}
}

type StatusTag uint8

const (
	StatusReady StatusTag = iota
)

type Status struct {
	Tag StatusTag
}

func (s Status) MarshalJSON() ([]byte, error) {
	return []byte{}, nil
}
