tests/spec/emit/snapshots/enum_struct_variant_named_tag.snap
---
source: tests/spec/emit/types.rs
description: |
  
  enum E {
    Tag { x: int },
    Other { x: int },
  }
  
  fn main() {
    let e = E.Tag { x: 1 }
    let _ = e
  }
---
package main

func MakeETag(arg0 int) E {
	return E{Tag: ETag_, X: arg0}
}

func MakeEOther(arg0 int) E {
	return E{Tag: EOther, X: arg0}
}

type ETag uint8

const (
	ETag_ ETag = iota
	EOther
)

type E struct {
	Tag ETag
	X   int
}

func main() {
	e := E{
		Tag: ETag_,
		X:   1,
	}
	_ = e
}
