tests/spec/emit/snapshots/enum_tag_constant_spells_reserved_word.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:fmt"
  
  enum ma {
    ke,
    other,
  }
  
  fn main() {
    let m = ma.ke
    let mut counts = Map.new<string, int>()
    counts["a"] = 1
    match m {
      ma.ke => fmt.Println(counts.length()),
      ma.other => fmt.Println("other"),
    }
  }
---
package main

import "fmt"

func Makemake() ma {
	return ma{Tag: make_}
}

func Makemaother() ma {
	return ma{Tag: maother}
}

type maTag uint8

const (
	make_ maTag = iota
	maother
)

type ma struct {
	Tag maTag
}

func main() {
	m := Makemake()
	counts := make(map[string]int)
	counts["a"] = 1
	if m.Tag == make_ {
		fmt.Println(len(counts))
	} else {
		fmt.Println("other")
	}
}
