tests/spec/emit/snapshots/enum_tuple_variant_with_fn_type.snap
---
source: tests/spec/emit/types.rs
description: |
  
  enum Transform<T> {
    Identity,
    Apply(fn(T) -> T),
  }
  
  fn test() -> int {
    let t = Transform.Apply(|x: int| x + 1);
    match t {
      Transform.Identity => 0,
      Transform.Apply(f) => f(41),
    }
  }
---
package main

func MakeTransformIdentity[T any]() Transform[T] {
	return Transform[T]{Tag: TransformIdentity}
}

func MakeTransformApply[T any](arg0 func(T) T) Transform[T] {
	return Transform[T]{Tag: TransformApply, Apply: arg0}
}

type TransformTag uint8

const (
	TransformIdentity TransformTag = iota
	TransformApply
)

type Transform[T any] struct {
	Tag   TransformTag
	Apply func(T) T
}

func test() int {
	t := MakeTransformApply(func(x int) int {
		return x + 1
	})
	if t.Tag == TransformIdentity {
		return 0
	}
	return t.Apply(41)
}
